--- a/jft-market/front-end/package.json
+++ b/jft-market/front-end/package.json
@@ -39,6 +39,7 @@
     "ember-image-slider": "0.0.4",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "1.2.2",
     "ember-source": "~2.11.0",
     "ember-sweetalert": "0.1.1",
     "ember-truth-helpers": "1.3.0",
